change back - failed experiment

--- a/fern.html
+++ b/fern.html
@@ -30,7 +30,7 @@
             <a href="/home.html">home</a>
           </li>
           <li>
-            <a href="fern/index.html">fern</a>
+            <a href="/fern.html">fern</a>
           </li>
           <li>
             <a href="/bird.html">bird</a>
@@ -52,13 +52,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="/images/gullyFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/gullyFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4">
-          <img src="/images/kioKio.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/kioKio.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4">
-          <img src="/images/bracken1.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/bracken1.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -66,13 +66,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="/images/fern5.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern5.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4">
-          <img src="/images/huruHuru.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/huruHuru.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4">
-          <img src="/images/fern19.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern19.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -80,16 +80,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/images/bigFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/bigFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern6.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern6.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern16.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern16.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern25.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern25.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -97,16 +97,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/images/fern15.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern15.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern20.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern20.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern27.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern27.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/fern8.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern8.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -114,16 +114,16 @@
      <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/images/maidenFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/maidenFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/brackenFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/brackenFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/waterFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/waterFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="/images/lakesFern.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/lakesFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -132,19 +132,19 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="/images/forestFloor1.jpg"
+            src="images/forestFloor1.jpg"
             class="img-fluid p-2 mt-5 border"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="/images/forestFloor2.jpg"
+            src="images/forestFloor2.jpg"
             class="img-fluid p-2 mt-5  border"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="/images/forestFloor3.jpg"
+            src="images/forestFloor3.jpg"
             class="img-fluid p-2 mt-5  border"
           />
         </div>
