added div for alignment

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 
     <div class="landing mt-5">
       <a href="/soon.html">
+        <div>
       咯
-      <br/>
+      </div>
+      <div>
       噔
+      </div>
       </a>
     </div>
     
