--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>ERCINK</title>
   </head>
-  <body>
+  <body class="opening">
 
     <div class="landing mt-5">
       <a href="/soon.html">
