--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="opening">
 
     <div class="landing mt-5">
-      <a href="/home.html">
+      <a href="/soon.html">
         <div>
       咯
       </div>
