--- a/home.html
+++ b/home.html
@@ -47,22 +47,28 @@
     
 
 
-    <div class="container">
+    <div class="container homePageLinks">
       <div class="row">
         <div class="col-sm-4 mb-3">
+        <a href="/plant.html">
         <img 
           src="images/fireFollowers.jpg" 
           class= "img-fluid p-1 mt-5 " />
+        </a>  
         </div>
         <div class="col-sm-4 mb-3">
+        <a href="/building.html">
         <img 
           src="images/suffolkHome.jpg" 
           class= "img-fluid p-1 mt-5" />
+          </a> 
         </div>
         <div class="col-sm-4 mb-3">
+        <a href="/fern.html">
         <img 
           src="images/kioKio.jpg" 
           class= "img-fluid p-1 mt-5" />
+          </a>
         </div>
       </div>
     </div>
@@ -72,6 +78,10 @@
     <div class="inTouch">
       <a href= "mailto:erc.ink.drawing@gmail.com">click here </a>to get in touch
     </div>
+    <div class="info">
+      <p>For originals, prints or commissions</p>
+    </div>
+    
 <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
