--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body class="opening">
 
-    <div class="landing mt-5">
-      <a href="/index.html">
+    <div class="landing">
+      <a href="/home.html">
         <div>
       咯
       </div>
