opening margin updated

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="opening">
 
-    <div class="landing">
+    <div class="landing mt-5">
       <a href="/home.html">
         <div>
       咯
