--- a/fern.html
+++ b/fern.html
@@ -47,7 +47,9 @@
         </ul>
       </div>
     </header>
-    <h1 class="text-center">pteridomania</h1>
+    <div class="title">
+    <h1>pteridomania</h1>
+    </div>
 
     <div class="container">
       <div class="row">
