--- a/building.html
+++ b/building.html
@@ -51,7 +51,9 @@
       </div>
     </header>
 
-    <h1 class= "text-center">building</h1>
+    <div class="title">
+    <h1>building</h1>
+    </div>
 
     <div class="container">
       <div class="row">
