--- a/home.html
+++ b/home.html
@@ -141,13 +141,13 @@
 <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-4 ">
                     <a href="/index.html" class="erc-ink">咯噔</a> 
                 </div>
-                <div class="col-sm-4">
-                    <h3 class="pteri">ERC INK</a> 
+                <div class="col-4">
+                    <h3 class="pteri mt-1">ERC INK</a> 
                 </div>
-                <div class="col-sm-4">
+                <div class="col-4 mt-1">
                     <a href="https://www.instagram.com/erc.ink/" class="insta"target="_blank"><i class="fab fa-instagram"></i></a> 
                 </div>
             </div>
