--- a/fern.html
+++ b/fern.html
@@ -194,19 +194,19 @@
         <div class="col-sm-4">
           <img
             src="images/forestFloor1.jpg"
-            class="img-fluid p-2 mt-5 border"
+            class="img-fluid p-2 mt-5"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/forestFloor2.jpg"
-            class="img-fluid p-2 mt-5  border"
+            class="img-fluid p-2 mt-5 "
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/forestFloor3.jpg"
-            class="img-fluid p-2 mt-5  border"
+            class="img-fluid p-2 mt-5  "
           />
         </div>
       </div>
