--- a/fern.html
+++ b/fern.html
@@ -23,7 +23,7 @@
     <title>fern</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="menu">
         <ul>
           <li>
@@ -211,6 +211,12 @@
         </div>
       </div>
     </div>
+    <div class="goUp mt-5">
+      <a href="#header">
+      <i class="fa fa-regular fa-angle-up"></i>
+      </a>
+    </div>
+
     <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
