scroll up added to all pages

--- a/bird.html
+++ b/bird.html
@@ -24,7 +24,7 @@
     <title>bird</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="menu">
         <ul>
           <li>
@@ -180,6 +180,13 @@
         </div>
       </div>
     </div>
+
+    <div class="goUp mt-5">
+      <a href="#header">
+      <i class="fa fa-regular fa-angle-up"></i>
+      </a>
+    </div>
+    
 <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
