--- a/building.html
+++ b/building.html
@@ -26,7 +26,7 @@
     <title>building</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="menu">
         <ul>
           <li>
@@ -216,6 +216,12 @@
           <img src="images/chorsuBazaar.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
+    </div>
+    
+    <div class="goUp mt-5">
+      <a href="#header">
+      <i class="fa fa-regular fa-angle-up"></i>
+      </a>
     </div>
     
     <footer class="footer">
