--- a/plant.html
+++ b/plant.html
@@ -26,7 +26,7 @@
     <title>plant</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="menu">
         <ul>
           <li>
@@ -215,6 +215,11 @@
       </div>
     </div>
 
+    <div class="goUp mt-5">
+      <a href="#header">
+      <i class="fa fa-regular fa-angle-up"></i>
+      </a>
+    </div>
 
     <footer class="footer">
         <div class="container-fluid foot">
