--- a/fern.html
+++ b/fern.html
@@ -48,56 +48,29 @@
       </div>
 
       <div class="menuBody" style="margin-top:30px;">
-
             <section class= "top-layer">
                <div class="collapsible-top" style="text-align:right; margin-right:40px;">
                <input type="checkbox" id="top" />
                <label for="top">MENU</label>
                <div class="top-content">
                  <ul>
-                   <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" 
-                      style="margin-top:-35px; margin-right:-30px;">
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="home.html">HOME</a></label>
-                    </section>
+                   <li style="margin-right:-35px;margin-top:-25px">
+                      <a href="home.html">HOME</a>
                    </li>
-                  <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" 
-                      style="margin-top:-5px; margin-right:-30px;">
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="fern.html">FERN</a></label>
-                    </section>
+                  <li style="margin-right:-35px;">
+                      <a href="fern.html">FERN</a>
                    </li>
-                   <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" style="margin-top:-5px; margin-right:-30px;">
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="bird.html">BIRD</a></label>
-                    </section>
+                   <li style="margin-right:-35px;">
+                      <a href="bird.html">BIRD</a>
                    </li>
-                   <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" style="margin-top:-5px; margin-right:-30px;">
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="plant.html">PLANT</a></label>
-                    </section>
+                   <li style="margin-right:-35px;">
+                      <a href="plant.html">PLANT</a>
                    </li>
-                   <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" style="margin-top:-5px; margin-right:-30px;">
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="building.html">BUILDING</a></label>
-                    </section>
+                   <li style="margin-right:-35px;">
+                      <a href="building.html">BUILDING</a>
                    </li>
-                   <li>
-                    <section class="bottom-layer">
-                      <div class="collapsible-bottom" style="margin-top:-5px; margin-right:-30px;" >
-                      <input type="checkbox" id="bottom" />
-                      <label for="bottom"><a href="mountain.html">MISC</a></label>
-                    </section>
+                   <li style="margin-right:-35px;">
+                      <a href="mountain.html">MISC</a>
                    </li>
                   </ul>
                </div>
